# Going_UP

./: .gitignore  CMakeLists.txt  CMakePresets.json
Going_UP/: Artifact.cpp  Artifact.h  CMakeLists.txt  Config.cpp  Config.h  Going_UP.cpp  Going_UP.h  Platforms.cpp  Platforms.h  Player.cpp  Player.h  Screen.cpp  Screen.h  Structures.h
config/: Level_3.json  artifacts.txt  platforms.txt  settings.json
config/Level/: Level_1.json  Level_2.json
